syntax = "proto3";

package roles;

service RoleService {
  rpc GetRolePermissions (GetRolePermissionsRequest) returns (GetRolePermissionsResponse);
}

message GetRolePermissionsRequest {
  string role = 1;
}

message GetRolePermissionsResponse {
  repeated string permissions = 1; 
}
